description = "t5app application"

apply plugin: "war"
apply plugin: "java"
apply plugin: "jetty"
apply plugin: "idea"

sourceCompatibility = "1.6"
targetCompatibility = "1.6"

group = "gwfs"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
}

// This simulates Maven's "provided" scope, until it is officially supported by Gradle
// See http://jira.codehaus.org/browse/GRADLE-784

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
    test {
        compileClasspath += configurations.provided
        runtimeClasspath += configurations.provided
    }
}

dependencies {

    compile "org.apache.tapestry:tapestry-core:5.3.2"
    compile "org.xerial:sqlite-jdbc:3.6.16"
    compile "com.jolbox:bonecp:0.7.1.RELEASE"

    provided "javax.servlet:servlet-api:2.5"
}

test {
    useTestNG()

    options.suites("src/test/conf/testng.xml")

    systemProperties["tapestry.service-reloading-enabled"] = "false"
    systemProperties["tapestry.execution-mode"] = "development"

    maxHeapSize = "600M"

    jvmArgs("-XX:MaxPermSize=256M")

    enableAssertions = true
}

// TODO: Configure execution mode for jettyRun task
